--- a/index.html
+++ b/index.html
@@ -1,11 +1,428 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Ramakrishna Polagani</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>Ramakrishna (RK) Polagani | Business Systems Analyst</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Ramakrishna (RK) Polagani - Business Systems Analyst portfolio, experience, skills, and projects." />
+  <style>
+    :root {
+      --bg: #f5f5f7;
+      --card-bg: #ffffff;
+      --text-main: #1f2933;
+      --text-muted: #6b7280;
+      --accent: #2563eb;
+      --accent-soft: #e0edff;
+      --border: #e5e7eb;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background-color: var(--bg);
+      color: var(--text-main);
+      line-height: 1.6;
+    }
+
+    header {
+      background: linear-gradient(135deg, #111827, #1f2937);
+      color: #fff;
+      padding: 24px 16px;
+    }
+
+    .container {
+      max-width: 980px;
+      margin: 0 auto;
+      padding: 0 16px;
+    }
+
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 16px;
+    }
+
+    .brand {
+      font-weight: 600;
+      letter-spacing: 0.04em;
+      font-size: 14px;
+      text-transform: uppercase;
+      opacity: 0.9;
+    }
+
+    nav a {
+      color: #e5e7eb;
+      text-decoration: none;
+      font-size: 14px;
+      margin-left: 16px;
+    }
+
+    nav a:hover {
+      color: #ffffff;
+      text-decoration: underline;
+    }
+
+    .hero {
+      padding: 32px 0 16px;
+    }
+
+    .hero-grid {
+      display: grid;
+      grid-template-columns: minmax(0, 2.5fr) minmax(0, 1.5fr);
+      gap: 24px;
+    }
+
+    .hero h1 {
+      margin: 0 0 8px;
+      font-size: 28px;
+    }
+
+    .hero h2 {
+      margin: 0 0 12px;
+      font-size: 16px;
+      font-weight: 500;
+      color: #9ca3af;
+    }
+
+    .hero p {
+      margin: 0 0 16px;
+      color: #e5e7eb;
+    }
+
+    .tag-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-bottom: 16px;
+    }
+
+    .tag {
+      font-size: 12px;
+      padding: 4px 10px;
+      border-radius: 999px;
+      background: rgba(255, 255, 255, 0.06);
+      border: 1px solid rgba(156, 163, 175, 0.4);
+      color: #e5e7eb;
+    }
+
+    .hero-card {
+      background-color: rgba(15, 23, 42, 0.75);
+      border-radius: 12px;
+      padding: 16px 16px 18px;
+      border: 1px solid rgba(55, 65, 81, 0.7);
+    }
+
+    .hero-card h3 {
+      margin: 0 0 8px;
+      font-size: 14px;
+      color: #e5e7eb;
+    }
+
+    .hero-card ul {
+      margin: 0;
+      padding-left: 18px;
+      font-size: 13px;
+      color: #d1d5db;
+    }
+
+    main {
+      padding: 24px 0 40px;
+    }
+
+    section {
+      margin-bottom: 20px;
+    }
+
+    .card {
+      background-color: var(--card-bg);
+      border-radius: 10px;
+      padding: 18px 18px 20px;
+      border: 1px solid var(--border);
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.03);
+    }
+
+    .card h2 {
+      margin-top: 0;
+      margin-bottom: 8px;
+      font-size: 18px;
+    }
+
+    .card-subtitle {
+      margin-top: 0;
+      margin-bottom: 16px;
+      font-size: 13px;
+      color: var(--text-muted);
+    }
+
+    .two-col {
+      display: grid;
+      grid-template-columns: minmax(0, 1.2fr) minmax(0, 1fr);
+      gap: 18px;
+    }
+
+    .item {
+      margin-bottom: 10px;
+    }
+
+    .item-title {
+      font-weight: 600;
+      font-size: 14px;
+    }
+
+    .item-meta {
+      font-size: 12px;
+      color: var(--text-muted);
+    }
+
+    .pill-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+
+    .pill {
+      font-size: 12px;
+      padding: 4px 10px;
+      border-radius: 999px;
+      background: var(--accent-soft);
+      color: var(--accent);
+      border: 1px solid #c4d4ff;
+    }
+
+    .contact-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      font-size: 14px;
+    }
+
+    .contact-row a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    .contact-row a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      border-top: 1px solid var(--border);
+      padding: 14px 16px 18px;
+      font-size: 12px;
+      color: var(--text-muted);
+      background-color: #f9fafb;
+    }
+
+    @media (max-width: 720px) {
+      .hero-grid {
+        grid-template-columns: minmax(0, 1fr);
+      }
+
+      nav {
+        display: none;
+      }
+
+      header {
+        padding-bottom: 18px;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to my website</h1>
-  <p>This site is under development. More coming soon.</p>
+<header>
+  <div class="container">
+    <div class="top-bar">
+      <div class="brand">RK POLAGANI</div>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#experience">Experience</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
+
+    <div class="hero">
+      <div class="hero-grid">
+        <div>
+          <h1>Ramakrishna (RK) Polagani</h1>
+          <h2>Business Systems Analyst · ERP / Enterprise Applications</h2>
+          <p>
+            I help organisations translate business needs into practical system solutions — improving
+            processes, data quality, and user experience across enterprise applications.
+          </p>
+          <div class="tag-list">
+            <span class="tag">Requirements &amp; Process Analysis</span>
+            <span class="tag">ERP / PPM / PLM</span>
+            <span class="tag">Stakeholder Collaboration</span>
+            <span class="tag">Implementation &amp; Support</span>
+          </div>
+        </div>
+        <div>
+          <div class="hero-card">
+            <h3>What I typically do</h3>
+            <ul>
+              <li>Work with business users to understand processes and pain points</li>
+              <li>Translate requirements into clear, testable system changes</li>
+              <li>Coordinate with technical teams on design, build, and rollout</li>
+              <li>Support adoption through training, documentation, and follow-up</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<main>
+  <div class="container">
+
+    <section id="about">
+      <div class="card">
+        <h2>About</h2>
+        <p class="card-subtitle">Short background and focus areas.</p>
+        <p>
+          I am a Business Systems Analyst with experience across enterprise tools such as ERP, PPM,
+          PLM, LMS and related applications. My work is centred on understanding how people actually
+          work, then aligning systems, data, and workflows so they can do that work more effectively.
+        </p>
+        <p>
+          I enjoy operating between business and IT — clarifying requirements, simplifying complexity,
+          and ensuring solutions are realistic, testable, and maintainable.
+        </p>
+      </div>
+    </section>
+
+    <section id="experience">
+      <div class="card">
+        <h2>Experience Snapshot</h2>
+        <p class="card-subtitle">High-level view of roles and responsibilities.</p>
+        <div class="two-col">
+          <div>
+            <div class="item">
+              <div class="item-title">Business Systems Analyst</div>
+              <div class="item-meta">Organisation / Location · YYYY–Present</div>
+              <ul>
+                <li>Partner with business stakeholders to map current and target processes.</li>
+                <li>Document functional requirements, user stories, and use cases.</li>
+                <li>Coordinate with technical teams on solution design and configuration.</li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <div class="item">
+              <div class="item-title">Key responsibilities across roles</div>
+              <ul>
+                <li>Requirements gathering workshops and stakeholder interviews.</li>
+                <li>Process documentation (AS-IS / TO-BE) and gap analysis.</li>
+                <li>System testing (SIT/UAT), issue triage, and release validation.</li>
+                <li>End-user support, training, and knowledge base updates.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- TODO: Replace example text with your actual organisations, dates, and key achievements. -->
+      </div>
+    </section>
+
+    <section id="skills">
+      <div class="card">
+        <h2>Skills &amp; Tools</h2>
+        <p class="card-subtitle">Mix of domains, methods, and platforms.</p>
+        <div class="two-col">
+          <div>
+            <h3 style="margin-top:0;font-size:14px;">Business &amp; Analysis</h3>
+            <ul>
+              <li>Business process mapping &amp; optimisation</li>
+              <li>Requirements elicitation and documentation</li>
+              <li>User stories, use cases, and acceptance criteria</li>
+              <li>Workshop facilitation and stakeholder management</li>
+            </ul>
+          </div>
+          <div>
+            <h3 style="margin-top:0;font-size:14px;">Systems &amp; Platforms</h3>
+            <ul>
+              <li>ERP / PPM / PLM / LMS (add your specific products here)</li>
+              <li>Reporting &amp; analytics tools</li>
+              <li>Ticketing / ITSM platforms</li>
+              <li>Confluence / SharePoint / documentation tools</li>
+            </ul>
+          </div>
+        </div>
+        <ul class="pill-list" style="margin-top:14px;">
+          <li class="pill">Process Analysis</li>
+          <li class="pill">Functional Documentation</li>
+          <li class="pill">Testing &amp; Validation</li>
+          <li class="pill">Change Support</li>
+          <li class="pill">User Training</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="card">
+        <h2>Selected Projects</h2>
+        <p class="card-subtitle">Illustrative examples – replace with your own initiatives.</p>
+        <div class="item">
+          <div class="item-title">ERP process improvement initiative</div>
+          <div class="item-meta">Role: Business Systems Analyst</div>
+          <ul>
+            <li>Mapped AS-IS order-to-cash process and identified bottlenecks and manual steps.</li>
+            <li>Worked with business and IT to define TO-BE process and prioritised enhancements.</li>
+            <li>Supported configuration, testing, and rollout, including user training materials.</li>
+          </ul>
+        </div>
+        <div class="item">
+          <div class="item-title">Reporting &amp; data quality uplift</div>
+          <div class="item-meta">Role: Analyst / Coordinator</div>
+          <ul>
+            <li>Collected reporting requirements from finance and operations teams.</li>
+            <li>Defined data rules and validations to improve accuracy and consistency.</li>
+            <li>Helped design dashboards and KPIs for leadership visibility.</li>
+          </ul>
+        </div>
+        <!-- TODO: Replace these with your real projects when ready. -->
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="card">
+        <h2>Contact</h2>
+        <p class="card-subtitle">Best ways to reach me.</p>
+        <div class="contact-row">
+          <span>Email:
+            <a href="mailto:youremail@example.com">youremail@example.com</a>
+          </span>
+          <span>LinkedIn:
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener">Add your LinkedIn URL</a>
+          </span>
+        </div>
+        <p style="margin-top:12px;font-size:13px;color:var(--text-muted);">
+          I’m open to conversations about business systems analysis, enterprise applications, and
+          process improvement opportunities.
+        </p>
+      </div>
+    </section>
+
+  </div>
+</main>
+
+<footer>
+  <div class="container">
+    © <span id="year"></span> Ramakrishna (RK) Polagani · Hosted on GitHub Pages
+  </div>
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
