--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Ramakrishna (RK) Polagani | Business Systems Analyst</title>
+  <title><title>Ramakrishna Polagani | Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</title>
+</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Ramakrishna (RK) Polagani - Business Systems Analyst portfolio, experience, skills, and projects." />
+  <meta name="description" content="Ramakrishna Polagani - Business Systems Analyst portfolio, experience, skills, and projects." />
   <style>
     :root {
       --bg: #f5f5f7;
