--- a/index.html
+++ b/index.html
@@ -13,250 +13,7 @@
 <title>Ramakrishna Polagani | Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Ramakrishna Polagani - Business Systems Analyst portfolio, experience, skills, and projects." />
-  <style>
-    :root {
-      --bg: #f5f5f7;
-      --card-bg: #ffffff;
-      --text-main: #1f2933;
-      --text-muted: #6b7280;
-      --accent: #2563eb;
-      --accent-soft: #e0edff;
-      --border: #e5e7eb;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background-color: var(--bg);
-      color: var(--text-main);
-      line-height: 1.6;
-    }
-
-    header {
-      background: linear-gradient(135deg, #111827, #1f2937);
-      color: #fff;
-      padding: 24px 16px;
-    }
-
-    .container {
-      max-width: 980px;
-      margin: 0 auto;
-      padding: 0 16px;
-    }
-
-    .top-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 16px;
-    }
-
-    .brand {
-      font-weight: 600;
-      letter-spacing: 0.04em;
-      font-size: 14px;
-      text-transform: uppercase;
-      opacity: 0.9;
-    }
-
-    nav a {
-      color: #e5e7eb;
-      text-decoration: none;
-      font-size: 14px;
-      margin-left: 16px;
-    }
-
-    nav a:hover {
-      color: #ffffff;
-      text-decoration: underline;
-    }
-
-    .hero {
-      padding: 32px 0 16px;
-    }
-
-    .hero-grid {
-      display: grid;
-      grid-template-columns: minmax(0, 2.5fr) minmax(0, 1.5fr);
-      gap: 24px;
-    }
-
-    .hero h1 {
-      margin: 0 0 8px;
-      font-size: 28px;
-    }
-
-    .hero h2 {
-      margin: 0 0 12px;
-      font-size: 16px;
-      font-weight: 500;
-      color: #9ca3af;
-    }
-
-    .hero p {
-      margin: 0 0 16px;
-      color: #e5e7eb;
-    }
-
-    .tag-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin-bottom: 16px;
-    }
-
-    .tag {
-      font-size: 12px;
-      padding: 4px 10px;
-      border-radius: 999px;
-      background: rgba(255, 255, 255, 0.06);
-      border: 1px solid rgba(156, 163, 175, 0.4);
-      color: #e5e7eb;
-    }
-
-    .hero-card {
-      background-color: rgba(15, 23, 42, 0.75);
-      border-radius: 12px;
-      padding: 16px 16px 18px;
-      border: 1px solid rgba(55, 65, 81, 0.7);
-    }
-
-    .hero-card h3 {
-      margin: 0 0 8px;
-      font-size: 14px;
-      color: #e5e7eb;
-    }
-
-    .hero-card ul {
-      margin: 0;
-      padding-left: 18px;
-      font-size: 13px;
-      color: #d1d5db;
-    }
-
-    main {
-      padding: 24px 0 40px;
-    }
-
-    section {
-      margin-bottom: 20px;
-    }
-
-    .card {
-      background-color: var(--card-bg);
-      border-radius: 10px;
-      padding: 18px 18px 20px;
-      border: 1px solid var(--border);
-      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.03);
-    }
-
-    .card h2 {
-      margin-top: 0;
-      margin-bottom: 8px;
-      font-size: 18px;
-    }
-
-    .card-subtitle {
-      margin-top: 0;
-      margin-bottom: 16px;
-      font-size: 13px;
-      color: var(--text-muted);
-    }
-
-    .two-col {
-      display: grid;
-      grid-template-columns: minmax(0, 1.2fr) minmax(0, 1fr);
-      gap: 18px;
-    }
-
-    .item {
-      margin-bottom: 10px;
-    }
-
-    .item-title {
-      font-weight: 600;
-      font-size: 14px;
-    }
-
-    .item-meta {
-      font-size: 12px;
-      color: var(--text-muted);
-    }
-
-    .pill-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-
-    .pill {
-      font-size: 12px;
-      padding: 4px 10px;
-      border-radius: 999px;
-      background: var(--accent-soft);
-      color: var(--accent);
-      border: 1px solid #c4d4ff;
-    }
-
-    .contact-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 12px;
-      font-size: 14px;
-    }
-
-    .contact-row a {
-      color: var(--accent);
-      text-decoration: none;
-    }
-
-    .contact-row a:hover {
-      text-decoration: underline;
-    }
-
-    footer {
-      border-top: 1px solid var(--border);
-      padding: 14px 16px 18px;
-      font-size: 12px;
-      color: var(--text-muted);
-      background-color: #f9fafb;
-    }
-
-@media (max-width: 720px) {
-  .hero-grid {
-    grid-template-columns: minmax(0, 1fr);
-  }
-
-  .top-bar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  nav {
-    margin-top: 8px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  nav a {
-    margin-left: 0;
-    margin-right: 12px;
-    margin-bottom: 8px;
-    font-size: 13px;
-  }
-
-  header {
-    padding-bottom: 18px;
-  }
-}
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
