--- a/sports.html
+++ b/sports.html
@@ -5,74 +5,7 @@
   <title>RK Polagani | Sports Enthusiast</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Sports experiences and interests of Ramakrishna (RK) Polagani." />
-  <style>
-    :root {
-      --bg: #f5f5f7;
-      --card-bg: #ffffff;
-      --primary: #004b8d;
-      --text-main: #1f2430;
-      --text-muted: #6b7280;
-      --border-soft: #e5e7eb;
-    }
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: var(--bg);
-      color: var(--text-main);
-    }
-    header {
-      position: sticky; top: 0;
-      background: rgba(245,245,247,0.95);
-      border-bottom: 1px solid var(--border-soft);
-      backdrop-filter: blur(8px);
-    }
-    .nav {
-      max-width: 1000px; margin: 0 auto;
-      padding: 0.75rem 1rem;
-      display: flex; justify-content: space-between; align-items: center;
-    }
-    .nav-links a {
-      margin-left: 1rem; color: var(--text-muted);
-    }
-    .nav-links a:hover { color: var(--primary); }
-    .container {
-      max-width: 1000px; margin: 2rem auto; padding: 1rem;
-    }
-    h1 { margin-top: 0; font-size: 2rem; }
-    .section-caption {
-      font-size: 0.8rem; color: var(--text-muted);
-      margin-bottom: 0.2rem; text-transform: uppercase;
-    }
-    .sports-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px,1fr));
-      gap: 1rem; margin-top: 1rem;
-    }
-    .card {
-      background: var(--card-bg); padding: 1rem;
-      border-radius: 12px; border: 1px solid var(--border-soft);
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
-      gap: 0.75rem; margin-top: 1rem;
-    }
-    .gallery-item {
-      background: var(--card-bg);
-      border: 1px solid var(--border-soft);
-      border-radius: 10px; overflow: hidden;
-    }
-    .gallery-item img {
-      width: 100%; height: 180px; object-fit: cover;
-    }
-    .caption {
-      padding: 0.4rem 0.6rem; color: var(--text-muted);
-      font-size: 0.8rem;
-    }
-    .back-link { margin-top: 2rem; font-size: 0.85rem; }
-    footer { margin-top: 2rem; text-align: center; font-size: 0.8rem; color: var(--text-muted); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -89,7 +22,7 @@
 <main class="container">
   <h1>Sports & Fitness</h1>
   <p>
-    Sports have always been a big part of my life — not just as entertainment, but as a source of 
+    Sports have always been a big part of my life not just as entertainment, but as a source of 
     energy, discipline, and motivation. Whether it's the strategy behind a close cricket chase, the 
     atmosphere of a baseball game, or the precision of Formula 1 racing, I enjoy the blend of 
     competition, teamwork, and passion that sports bring.
