--- a/travel.html
+++ b/travel.html
@@ -5,186 +5,7 @@
   <title>RK Polagani | Travelling Experiences</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Travelling experiences of Ramakrishna (RK) Polagani." />
-  <style>
-    :root {
-      --bg: #f5f5f7;
-      --card-bg: #ffffff;
-      --primary: #004b8d;
-      --primary-soft: #e3f0fb;
-      --text-main: #1f2430;
-      --text-muted: #6b7280;
-      --border-soft: #e5e7eb;
-    }
-
-    * { box-sizing: border-box; }
-
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background-color: var(--bg);
-      color: var(--text-main);
-      line-height: 1.6;
-    }
-
-    a {
-      color: var(--primary);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      background: rgba(245, 245, 247, 0.96);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid var(--border-soft);
-    }
-
-    .nav {
-      max-width: 1000px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0.6rem 1rem;
-    }
-
-    .nav-left {
-      font-weight: 600;
-      font-size: 0.95rem;
-    }
-
-    .nav-links a {
-      margin-left: 1rem;
-      font-size: 0.9rem;
-      color: var(--text-muted);
-    }
-
-    .nav-links a:hover {
-      color: var(--primary);
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 1.5rem 1rem 3rem;
-    }
-
-    .page-header {
-      background: var(--card-bg);
-      border-radius: 14px;
-      padding: 1.8rem 1.5rem;
-      box-shadow: 0 10px 25px rgba(15, 23, 42, 0.06);
-      border: 1px solid var(--border-soft);
-      margin-top: 1.5rem;
-    }
-
-    .page-header h1 {
-      margin: 0 0 0.4rem 0;
-      font-size: 1.8rem;
-    }
-
-    .page-header p {
-      margin: 0.2rem 0;
-      color: var(--text-muted);
-      font-size: 0.95rem;
-    }
-
-    .section-caption {
-      font-size: 0.8rem;
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-      color: var(--text-muted);
-      margin-top: 2rem;
-      margin-bottom: 0.1rem;
-    }
-
-    h2 {
-      font-size: 1.2rem;
-      margin: 0.2rem 0 0.6rem;
-    }
-
-    .trip-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 1rem;
-    }
-
-    .trip-card {
-      background: var(--card-bg);
-      border-radius: 12px;
-      border: 1px solid var(--border-soft);
-      padding: 0.9rem 1rem;
-      font-size: 0.9rem;
-    }
-
-    .trip-card h3 {
-      margin: 0 0 0.3rem;
-      font-size: 0.95rem;
-    }
-
-    .trip-meta {
-      font-size: 0.8rem;
-      color: var(--text-muted);
-      margin-bottom: 0.3rem;
-    }
-
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 0.75rem;
-      margin-top: 0.75rem;
-    }
-
-    .gallery-item {
-      background: var(--card-bg);
-      border-radius: 10px;
-      overflow: hidden;
-      border: 1px solid var(--border-soft);
-    }
-
-    .gallery-item img {
-      width: 100%;
-      display: block;
-      height: 180px;
-      object-fit: cover;
-    }
-
-    .gallery-caption {
-      padding: 0.4rem 0.6rem 0.6rem;
-      font-size: 0.8rem;
-      color: var(--text-muted);
-    }
-
-    .back-link {
-      margin-top: 1.5rem;
-      font-size: 0.85rem;
-    }
-
-    footer {
-      text-align: center;
-      font-size: 0.8rem;
-      color: var(--text-muted);
-      padding: 1.5rem 1rem 2rem;
-    }
-
-    @media (max-width: 768px) {
-      .nav {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 0.25rem;
-      }
-
-      .nav-links {
-        display: flex;
-        flex-wrap: wrap;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
