--- a/index.html
+++ b/index.html
@@ -71,14 +71,28 @@
         <h2>About</h2>
         <p class="card-subtitle">Short background and focus areas.</p>
         <p>
-          I am a Business Systems Analyst with experience across enterprise tools such as ERP, PPM,
-          PLM, LMS and related applications. My work is centred on understanding how people actually
-          work, then aligning systems, data, and workflows so they can do that work more effectively.
-        </p>
-        <p>
-          I enjoy operating between business and IT — clarifying requirements, simplifying complexity,
-          and ensuring solutions are realistic, testable, and maintainable.
-        </p>
+  I’m a PLM Business Systems Analyst and Integration Architect with 14+ years of experience helping organizations
+  modernize how they design, build, and manage products. I’ve worked across Healthcare, MedTech, Hi-Tech,
+  Semiconductor, Industrial Equipment, Consumer Goods, and Aerospace, giving me a broad perspective on how
+  different industries approach product development and digital transformation.
+</p>
+
+<p>
+  My focus is on designing and delivering scalable PLM solutions and integrations across systems such as Oracle
+  Agile PLM, Siemens Teamcenter, PTC Windchill, Arena PLM, ERP, and MES environments. I specialize in creating
+  unified digital threads using tools like T4X/T4O, Oracle Fusion Middleware, MuleSoft, and Power Automate to
+  connect engineering, manufacturing, and quality processes.
+</p>
+
+<p>
+  Beyond work, sports from cricket to baseball and travel across Asia and North America have shaped how I
+  approach teamwork, adaptability, and problem solving. These experiences help me bring a balanced, global
+  perspective to every project.
+</p>
+
+<p>
+  I enjoy operating between business and IT clarifying requirements, simplifying complexity, and ensuring
+  solutions are realistic, testable, and maintainable.
       </div>
     </section>
 
