--- a/travel.html
+++ b/travel.html
@@ -10,10 +10,11 @@
 <body>
   <header>
     <div class="nav">
-      <div class="nav-left">Ramakrishna (RK) Polagani</div>
+      <div class="nav-left">Ramakrishna Polagani (RK)</div>
       <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="travel.html">Travelling</a>
+        <a href="sports.html">Sports</a>
       </div>
     </div>
   </header>
