--- a/sports.html
+++ b/sports.html
@@ -10,7 +10,7 @@
 <body>
 <header>
   <div class="nav">
-    <div class="nav-left">Ramakrishna (RK) Polagani</div>
+    <div class="nav-left">Ramakrishna Polagani (RK)</div>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="travel.html">Travelling</a>
