--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 <header>
   <div class="container">
     <div class="top-bar">
-      <div class="brand">RK POLAGANI</div>
+      <a href="index.html" class="brand">RK POLAGANI</a>
       <nav>
+        <a href="index.html">Home</a>
         <a href="#about">About</a>
         <a href="#experience">Experience</a>
         <a href="#skills">Skills</a>
