--- a/sports.html
+++ b/sports.html
@@ -22,7 +22,7 @@
         <a href="index.html#projects">Projects</a>
         <a href="index.html#contact">Contact</a>
         <a href="travel.html">Travelling</a>
-        <a href="sports.html">Sports</a>
+        <a href="sports.html" class="active">Sports</a>
       </nav>
     </div>
   </div>
