--- a/travel.html
+++ b/travel.html
@@ -20,7 +20,7 @@
           <a href="index.html#skills">Skills</a>
           <a href="index.html#projects">Projects</a>
           <a href="index.html#contact">Contact</a>
-          <a href="travel.html">Travelling</a>
+          <a href="travel.html" class="active">Travelling</a>
           <a href="sports.html">Sports</a>
         </nav>
       </div>
