--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Ramakrishna Polagani - PLM Business Systems Analyst & Integration Architect portfolio, experience, skills, and projects." />
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon-rk-logo.png">
+  <link rel="apple-touch-icon" href="images/favicon-rk-logo.png">
+
   <!-- Canonical URL -->
   <link rel="canonical" href="https://rkpolagani.com/" />
 
@@ -23,13 +27,15 @@
   <meta property="og:title" content="Ramakrishna Polagani | PLM Business Systems Analyst & Integration Architect" />
   <meta property="og:description" content="PLM Business Systems Analyst & Integration Architect specializing in Oracle Agile PLM, Siemens Teamcenter, PTC Windchill, Arena PLM, and PLM–ERP–MES integrations." />
   <meta property="og:url" content="https://rkpolagani.com/" />
-  <!-- Optional: update with a real image when you have one -->
-  <!-- <meta property="og:image" content="https://rkpolagani.com/images/preview.jpg" /> -->
+  <meta property="og:image" content="https://rkpolagani.com/images/favicon-rk-logo.png" />
+  <meta property="og:image:width" content="800" />
+  <meta property="og:image:height" content="800" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Ramakrishna Polagani | PLM Business Systems Analyst & Integration Architect" />
   <meta name="twitter:description" content="Helping organizations modernize how they design, build, and manage products through PLM, ERP, and MES integrations." />
+  <meta name="twitter:image" content="https://rkpolagani.com/images/favicon-rk-logo.png" />
 
   <!-- Structured data (Person) -->
   <script type="application/ld+json">
@@ -76,7 +82,7 @@
           <h1>Ramakrishna Polagani (RK)</h1>
           <h2>Business Systems Analyst • PLM Architect • Traveller • Sports Enthusiast</h2>
           <p>
-            I help engineering, manufacturing, and IT teams build a unified digital thread across the enterprise 
+            I help engineering, manufacturing, and IT teams build a unified digital thread across the enterprise
             from product design to production and quality so decisions are faster, data is cleaner, and change is controlled.
           </p>
           <div class="tag-list">
@@ -91,6 +97,11 @@
           </a>
         </div>
         <div class="reveal" data-delay="2">
+          <!-- Profile photo card -->
+          <div class="hero-profile-card">
+            <img src="images/profile.jpg" alt="Ramakrishna Polagani">
+          </div>
+
           <div class="hero-card">
             <h3>What I typically do</h3>
             <ul>
