--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -100,7 +99,11 @@
         <div class="reveal" data-delay="2">
           <!-- Profile photo card -->
           <div class="hero-profile-card">
-            <img src="images/profile.jpg" alt="Ramakrishna Polagani">
+            <img
+              src="assets/images/Profile/IMG-8092.JPG"
+              alt="Ramakrishna Polagani"
+              class="profile-photo"
+            >
           </div>
 
           <div class="hero-card">
