--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
         <p>
           My core strengths are in <strong>Siemens Teamcenter</strong>, <strong>Oracle Agile PLM</strong>,
           <strong>Windchill</strong>, and <strong>MechWorks PDM</strong>, combined with hands-on integration work
-          using <strong>T4X/T4O</strong>, <strong>Oracle Fusion Middleware</strong>, APIs, and
+          using <strong>T4X/T4O</strong>, <strong>Oracle Fusion Middleware</strong>, <strong>APIs</strong>, and
           <strong>Power Platform</strong>. I design integration patterns that connect PLM with <strong>ERP
           (Oracle EBS, Syspro, SAP, Dynamics)</strong>, <strong>ALM (Polarion)</strong>, <strong>MES</strong>, and
           <strong>QMS</strong> to create a reliable digital thread.
         </p>
 
         <p>
-          I’m comfortable operating between business and IT – leading workshops, clarifying requirements, running
+          I’m comfortable operating between business and IT  leading workshops, clarifying requirements, running
           fit-gap analyses, and then working with technical teams to make sure solutions are practical, testable,
           and supportable. I enjoy simplifying complex landscapes and aligning tools, data, and processes so teams
           can focus on delivery rather than firefighting integrations.
@@ -175,8 +175,8 @@
               <div class="item-meta">StarFish Medical · Canada · Sep 2023 – Present</div>
               <ul>
                 <li>Lead cross-functional workshops with Engineering, Manufacturing, Quality, and Finance to define PLM/PDM strategies and digital operations roadmaps.</li>
-                <li>Design functional architecture and integration patterns connecting PLM, <strong>Syspro ERP</strong>, QMS, and ALM (Polarion) for end-to-end product data flow.</li>
-                <li>Support and enhance <strong>MechWorks PDM</strong>, document control, and change workflows to improve traceability and regulatory compliance.</li>
+                <li>Design functional architecture and integration patterns connecting PDM MechWorks, Syspro ERP, QMS, and ALM (Polarion) for end-to-end product data flow.</li>
+                <li>Support and enhance MechWorks PDM, document control, and change workflows to improve traceability and regulatory compliance.</li>
                 <li>Develop requirements, use cases, RTMs, and UAT plans; coordinate testing and deployment with internal and vendor teams.</li>
                 <li>Leverage <strong>SharePoint, M365, Power Automate, and Power Platform</strong> for workflow automation, collaboration, and reporting.</li>
               </ul>
@@ -186,7 +186,7 @@
               <div class="item-title">PLM Consultant / Solution Architect</div>
               <div class="item-meta">Infosys · Canada &amp; India · Jul 2016 – Sep 2023</div>
               <ul>
-                <li>Designed and implemented <strong>Teamcenter</strong> and <strong>Oracle Agile PLM</strong> solutions for global Aerospace, Hi-Tech, and Industrial clients.</li>
+                <li>Designed and implemented <strong>Siemens Teamcenter</strong> and <strong>Oracle Agile PLM</strong> solutions for global Aerospace, Hi-Tech, and Industrial clients.</li>
                 <li>Built integration frameworks using <strong>T4O</strong> and Oracle FMW to synchronize parts, BOMs, and change data between PLM and ERP systems.</li>
                 <li>Defined synchronization strategies across PLM, ERP, QMS, and CAD systems to strengthen governance and product data quality.</li>
                 <li>Managed global delivery teams, coordinating onshore–offshore work, SLAs, and continuous improvement initiatives.</li>
@@ -199,7 +199,7 @@
               <div class="item-meta">Tech Mahindra · India · Aug 2011 – Jun 2016</div>
               <ul>
                 <li>Implemented and supported <strong>Oracle Agile PLM 9.3.x</strong> including configuration, custom extensions, web services, and integrations with Oracle EBS.</li>
-                <li>Developed BMIDE extensions and services in <strong>Teamcenter</strong> to support complex change workflows and integration scenarios.</li>
+                <li>Developed BMIDE extensions and services in <strong>Siemens Teamcenter</strong> to support complex change workflows and integration scenarios.</li>
                 <li>Led data migration activities from legacy systems into Agile PLM, including data cleansing, validation, and performance optimization.</li>
                 <li>Authored HLDs/LLDs and interface design documents ensuring traceability from business requirements to technical implementation.</li>
               </ul>
