--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </script>
 
   <meta charset="UTF-8" />
-  <title>Ramakrishna Polagani | PLM Integration Engineer • Business Systems Analyst</title>
+  <title>Ramakrishna Polagani | PLM Techno-functional Architect • Business Systems Analyst</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Ramakrishna (RK) Polagani - PLM Integration Engineer, Functional Architect, and Business Systems Analyst specializing in Teamcenter, Oracle Agile PLM, and end-to-end PLM–ERP–MES integrations." />
+  <meta name="description" content="Ramakrishna (RK) Polagani - PLM Techno-functional Architect, and Business Systems Analyst specializing in Teamcenter, Oracle Agile PLM, and end-to-end PLM–ERP–MES integrations." />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/favicon-rk-logo.png">
@@ -24,8 +24,8 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Ramakrishna Polagani | PLM Integration Engineer & Business Systems Analyst" />
-  <meta property="og:description" content="Results-driven PLM Integration Engineer and Business Systems Analyst with 14+ years of experience in Teamcenter, Oracle Agile PLM, Windchill, MechWorks PDM, Syspro ERP, and complex PLM–ERP–ALM integrations." />
+  <meta property="og:title" content="Ramakrishna Polagani | PLM Techno-functional Architect & Business Systems Analyst" />
+  <meta property="og:description" content="Results-driven PLM Techno-functional Architect and Business Systems Analyst with 14+ years of experience in Teamcenter, Oracle Agile PLM, Windchill, MechWorks PDM, Syspro ERP, and complex PLM–ERP–ALM integrations." />
   <meta property="og:url" content="https://rkpolagani.com/" />
   <meta property="og:image" content="https://rkpolagani.com/images/favicon-rk-logo.png" />
   <meta property="og:image:width" content="800" />
@@ -33,7 +33,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Ramakrishna Polagani | PLM Integration Engineer & Business Systems Analyst" />
+  <meta name="twitter:title" content="Ramakrishna Polagani | PLM Techno-functional Architect & Business Systems Analyst" />
   <meta name="twitter:description" content="Helping engineering, manufacturing, and IT teams build a unified digital thread across PLM, ERP, MES, ALM, and QMS." />
   <meta name="twitter:image" content="https://rkpolagani.com/images/favicon-rk-logo.png" />
 
@@ -45,8 +45,8 @@
     "name": "Ramakrishna Polagani",
     "alternateName": "RK Polagani",
     "url": "https://rkpolagani.com/",
-    "jobTitle": "PLM Integration Engineer, Functional Architect & Business Systems Analyst",
-    "description": "Results-driven PLM Integration Engineer and Functional Architect specializing in Siemens Teamcenter, Oracle Agile PLM, Windchill, MechWorks PDM, Syspro ERP, and end-to-end PLM–ERP–ALM–MES integrations.",
+    "jobTitle": "PLM Techno-functional Architect & Business Systems Analyst",
+    "description": "Results-driven PLM Techno-functional Architect specializing in Siemens Teamcenter, Oracle Agile PLM, Windchill, MechWorks PDM, Syspro ERP, and end-to-end PLM–ERP–ALM–MES integrations.",
     "sameAs": [
       "https://www.linkedin.com/in/ramakrishna-polagani-67297ab8/"
     ]
@@ -135,7 +135,7 @@
         <p class="card-subtitle">Who I am and how I work.</p>
 
         <p>
-          I’m a results-driven PLM Integration Engineer, Functional Architect, and Business Systems Analyst with over
+          I’m a results-driven PLM Techno-functional Architect, and Business Systems Analyst with over
           14 years of experience delivering PLM implementations and integrations across Medical Devices, Hi-Tech,
           Aerospace, Semiconductor, Industrial Equipment, Consumer Goods, and Healthcare.
         </p>
