--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- LEFT COLUMN -->
         <div class="reveal" data-delay="1">
           <h1>Ramakrishna Polagani (RK)</h1>
-          <h2>PLM Techno-functional Architect • Business Systems Analyst</h2>
+          <h2>PLM Techno-functional Architect • Business Systems Analyst • Traveller • Sports Enthusiast</h2>
           <p>
             I design and implement end-to-end PLM solutions and integrations that connect engineering, manufacturing,
             quality, and finance. My focus is on building a reliable digital thread across PLM, ERP, ALM, MES, and QMS
