--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <div class="contact-row">
           <span>Email:
             <!-- replace with your real email -->
-            <a href="mailto:youremail@example.com">youremail@example.com</a>
+            <a href="mailto:ramakrishnap13@gmail.com">ramakrishnap13@gmail.com</a>
           </span>
           <span>LinkedIn:
             <a href="https://www.linkedin.com/in/ramakrishna-polagani-67297ab8/" target="_blank" rel="noopener">
