--- a/travel.html
+++ b/travel.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>RK Polagani | Travelling Experiences</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Travelling experiences of Ramakrishna (RK) Polagani." />
+  <meta name="description" content="Travelling experiences of Ramakrishna (RK) Polagani – from a first solo journey to Leh Ladakh in 2017 to exploring new cultures and landscapes across India and beyond." />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,46 +37,65 @@
       <div class="card">
         <h1 style="margin-bottom:10px;">Travelling Experiences</h1>
         <p class="card-subtitle">
-          Places, moments, and journeys that shaped how I see people, culture, and work.
+          A journey that started in 2017 with a solo trip to Leh Ladakh — and hasn’t really stopped.
         </p>
         <p>
-          Travel has helped me connect perspectives across countries and cultures — from Asia
-          to North America. Each trip brings new context, whether it’s understanding how people
-          live and work, or simply taking time to reset and reflect.
+          Travel has helped me connect perspectives across regions, cultures, and ways of living.
+          It balances my professional life in PLM and systems with moments of simplicity on the road:
+          mountains, local food, conversations with strangers, and long days on a bike or in a bus.
         </p>
         <p>
-          This page is a simple log of some of those experiences and the memories that stayed
-          with me along the way.
+          This page is a growing log of some of those journeys, starting with the first one that
+          changed everything for me: a solo trip from Hyderabad to Leh Ladakh in 2017.
         </p>
       </div>
     </section>
 
     <!-- Highlights / Trips -->
     <section class="reveal">
-      <div class="section-caption">Highlights</div>
+      <div class="section-caption">Travel Journey</div>
       <div class="card">
-        <h2>Recent or memorable trips</h2>
+        <h2>Key trips & moments</h2>
 
         <div class="travel-list">
-          <!-- Example 1 -->
+
+          <!-- 2017 – Leh Ladakh -->
           <div class="card">
-            <h3>Example trip title</h3>
-            <div class="item-meta">City / Country · Year</div>
+            <h3>2017 – Leh Ladakh: First Solo Journey</h3>
+            <div class="item-meta">Leh &amp; Ladakh, India · 2017</div>
             <p>
-              Short 2–3 line summary of why this trip mattered to you – people you met,
-              something you learned, or an experience that stayed with you.
+              My travel story really began in 2017, when I took a solo trip from Hyderabad to Leh Ladakh.
+              Coming from South India, it felt like stepping into a completely different world – cold weather,
+              high altitude, new food, and a culture that was different but incredibly warm and welcoming.
+            </p>
+            <p>
+              During the trip I met travellers from across India and abroad. Even though I started alone,
+              it never really felt like a “solo” journey – conversations at small cafes, shared taxis, and
+              long bus rides turned strangers into temporary travel companions.
+            </p>
+            <p>
+              The highlight was a bike ride from Leh to Pangong Lake, crossing one of the highest motorable
+              passes in the world. The combination of winding mountain roads, silence, and open landscapes
+              is something you don’t forget easily.
+            </p>
+            <p>
+              That journey gave me confidence to step out of my comfort zone, trust myself in unfamiliar
+              situations, and appreciate how different parts of the country live and think. It’s still the
+              trip I look back to whenever I think about “why I travel”.
             </p>
           </div>
 
-          <!-- Example 2 -->
+          <!-- Placeholder for future trips -->
           <div class="card">
-            <h3>Another destination</h3>
-            <div class="item-meta">City / Country · Year</div>
+            <h3>More journeys to come</h3>
+            <div class="item-meta">India &amp; Beyond · 2018 – Present</div>
             <p>
-              You can replace these examples with real trips: your first solo travel,
-              a trip with friends, or a place connected to your career or studies.
+              Since that first trip, I’ve continued exploring new places – from different parts of India
+              to my current life in Canada. I’ll keep adding more stories, photos, and reflections here as
+              I document them properly instead of just keeping them in my phone gallery.
             </p>
           </div>
+
         </div>
       </div>
     </section>
@@ -85,20 +104,25 @@
     <section class="reveal">
       <div class="section-caption">Gallery</div>
       <div class="card">
-        <h2>Photos</h2>
+        <h2>Leh Ladakh Moments</h2>
         <p style="font-size:0.9rem; color:var(--text-muted);">
-          A few photos from different places. I keep it small and simple so the page loads fast.
+          A few photos from that first solo journey. Replace the image filenames below with your actual
+          Leh Ladakh photos (for example, from your ride to Pangong Lake or the high passes).
         </p>
 
         <div class="gallery">
-          <!-- Replace image filenames with your real ones -->
+          <!-- Replace image filenames with your real ones under assets/travel/ or images/ -->
           <div class="gallery-item">
-            <img src="images/trip1.jpg" alt="Trip 1 description" />
-            <div class="caption">Short caption about this moment or place.</div>
+            <img src="assets/travel/leh-mountains.jpg" alt="Mountain ranges near Leh" />
+            <div class="caption">Mountain ranges on the way to Leh – the first glimpse of Ladakh’s landscape.</div>
           </div>
           <div class="gallery-item">
-            <img src="images/trip2.jpg" alt="Trip 2 description" />
-            <div class="caption">Another memory you want to highlight.</div>
+            <img src="assets/travel/leh-bike-pangong.jpg" alt="Bike ride from Leh to Pangong Lake" />
+            <div class="caption">Bike ride from Leh to Pangong Lake, crossing one of the highest motorable passes.</div>
+          </div>
+          <div class="gallery-item">
+            <img src="assets/travel/leh-pangong-lake.jpg" alt="Pangong Lake" />
+            <div class="caption">Pangong Lake – calm water, cold wind, and a place that’s hard to leave.</div>
           </div>
         </div>
       </div>
