--- a/travel.html
+++ b/travel.html
@@ -65,12 +65,12 @@
             <div class="item-meta">Leh &amp; Ladakh, India · 2017</div>
             <p>
               My travel story really began in 2017, when I took a solo trip from Hyderabad to Leh Ladakh.
-              Coming from South India, it felt like stepping into a completely different world – cold weather,
+              Coming from South India, it felt like stepping into a completely different world  cold weather,
               high altitude, new food, and a culture that was different but incredibly warm and welcoming.
             </p>
             <p>
               During the trip I met travellers from across India and abroad. Even though I started alone,
-              it never really felt like a “solo” journey – conversations at small cafes, shared taxis, and
+              it never really felt like a “solo” journey  conversations at small cafes, shared taxis, and
               long bus rides turned strangers into temporary travel companions.
             </p>
             <p>
@@ -90,7 +90,7 @@
             <h3>More journeys to come</h3>
             <div class="item-meta">India &amp; Beyond · 2018 – Present</div>
             <p>
-              Since that first trip, I’ve continued exploring new places – from different parts of India
+              Since that first trip, I’ve continued exploring new places  from different parts of India
               to my current life in Canada. I’ll keep adding more stories, photos, and reflections here as
               I document them properly instead of just keeping them in my phone gallery.
             </p>
