--- a/travel.html
+++ b/travel.html
@@ -109,23 +109,46 @@
           A few photos from that first solo journey. Replace the image filenames below with your actual
           Leh Ladakh photos (for example, from your ride to Pangong Lake or the high passes).
         </p>
-
-        <div class="gallery">
-          <!-- Replace image filenames with your real ones under assets/travel/ or images/ -->
-          <div class="gallery-item">
-            <img src="assets/travel/leh-mountains.jpg" alt="Mountain ranges near Leh" />
-            <div class="caption">Mountain ranges on the way to Leh – the first glimpse of Ladakh’s landscape.</div>
-          </div>
-          <div class="gallery-item">
-            <img src="assets/travel/leh-bike-pangong.jpg" alt="Bike ride from Leh to Pangong Lake" />
-            <div class="caption">Bike ride from Leh to Pangong Lake, crossing one of the highest motorable passes.</div>
-          </div>
-          <div class="gallery-item">
-            <img src="assets/travel/leh-pangong-lake.jpg" alt="Pangong Lake" />
-            <div class="caption">Pangong Lake – calm water, cold wind, and a place that’s hard to leave.</div>
-          </div>
+    <div class="gallery">
+      <!-- Marmot photo -->
+      <div class="gallery-item">
+        <img src="assets/travel/leh-marmot.jpg" alt="Marmot in the mountains near Ladakh" />
+        <div class="caption">
+          A curious marmot along the way – a reminder that you share the mountains with more than just travellers.
         </div>
       </div>
+
+      <!-- Pangong Lake -->
+      <div class="gallery-item">
+        <img src="assets/travel/leh-pangong-lake.jpg" alt="Pangong Lake in Ladakh" />
+        <div class="caption">
+          Pangong Lake – calm blue water, cold wind, and a view that makes the entire journey worth it.
+        </div>
+      </div>
+
+      <!-- You riding bike through mountains -->
+      <div class="gallery-item">
+        <img src="assets/travel/leh-bike-mountains.jpg" alt="RK riding a bike through the mountains in Ladakh" />
+        <div class="caption">
+          Riding through the mountain roads – solo on paper, but surrounded by landscapes that keep you moving.
+        </div>
+      </div>
+
+      <!-- Ladakh mountains landscape -->
+      <div class="gallery-item">
+        <img src="assets/travel/leh-mountain-range.jpg" alt="Ladakh mountain range" />
+        <div class="caption">
+          Ladakh’s mountain range – wide, quiet, and completely different from life back in Hyderabad.
+        </div>
+      </div>
+    </div>
+  <!-- Mighty Changla Pass -->
+  <div class="gallery-item">
+    <img src="assets/travel/leh-changla-pass.jpg" alt="Mighty Changla Pass" />
+    <div class="caption">
+      Mighty Changla Pass — one of the highest motorable passes, cold winds and breathtaking views.
+    </div>
+  </div>
 
       <div class="back-link">
         ← <a href="index.html">Back to main profile</a>
