--- a/travel.html
+++ b/travel.html
@@ -112,7 +112,7 @@
     <div class="gallery">
       <!-- Marmot photo -->
       <div class="gallery-item">
-        <img src="assets/images/Travel/leh-marmot.jpg" alt="Marmot in the mountains near Ladakh" />
+        <img src="assets/images/Travel/leh-marmot.JPG" alt="Marmot in the mountains near Ladakh" />
         <div class="caption">
           A curious marmot along the way – a reminder that you share the mountains with more than just travellers.
         </div>
@@ -120,7 +120,7 @@
 
       <!-- Pangong Lake -->
       <div class="gallery-item">
-        <img src="assets/images/Travel/leh-pangong-lake.jpg" alt="Pangong Lake in Ladakh" />
+        <img src="assets/images/Travel/leh-pangong-lake.JPG" alt="Pangong Lake in Ladakh" />
         <div class="caption">
           Pangong Lake – calm blue water, cold wind, and a view that makes the entire journey worth it.
         </div>
@@ -136,7 +136,7 @@
 
       <!-- Ladakh mountains landscape -->
       <div class="gallery-item">
-        <img src="assets/images/Travel/leh-mountain-range.jpg" alt="Ladakh mountain range" />
+        <img src="assets/images/Travel/leh-mountain-range.JPG" alt="Ladakh mountain range" />
         <div class="caption">
           Ladakh’s mountain range – wide, quiet, and completely different from life back in Hyderabad.
         </div>
@@ -144,7 +144,7 @@
     </div>
   <!-- Mighty Changla Pass -->
   <div class="gallery-item">
-    <img src="assets/images/Travel/leh-changla-pass.jpg" alt="Mighty Changla Pass" />
+    <img src="assets/images/Travel/leh-changla-pass.JPG" alt="Mighty Changla Pass" />
     <div class="caption">
       Mighty Changla Pass — one of the highest motorable passes, cold winds and breathtaking views.
     </div>
